--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
  <head>
   <title>
-   Resume
+   Curriculo de Tiago Batista da Silva
   </title>
   <script src="https://cdn.tailwindcss.com">
   </script>
@@ -131,38 +131,41 @@
     <p>
      Carga horária: 48 horas      Término: 05/2008
     </p>
-              <p><strong>Curso:</strong> Informática (Básico)</p>
-            <p><strong>Instituição:</strong> October - Cursos de informática</p>
-            <p><strong>Carga horária:</strong> 112 horas <strong>Término:</strong> 11/2005</p>
+     <p>
+    <strong>Curso:</strong> Informática (Básico)</p>
+    <p><strong>Instituição:</strong> October - Cursos de informática</p>
+    <p><strong>Carga horária:</strong> 112 horas <strong>Término:</strong> 11/2005</p><br>
         </div>
         <div>
-            <h2 class="text-xl font-bold mb-2">Experiências Profissionais</h2>
-            <div class="mb-4">
+            <hr class="border-gray-300 mb-8"/>
+            <div class="mb-8">
+             <h2 class="text-lg font-semibold mb-2">Experiências Profissionais</h2>
+            <div class="mb-8">
                 <p><strong>03/2024 - 11/2024: Global ala master</strong></p>
                 <p><strong>Cargo:</strong> Agente de portaria</p>
                 <p><strong>Atividades Desenvolvidas:</strong> Controle de acesso de pedestres e veículos em uma filial de transportadora e monitoramento de CFTV.</p>
             </div>
-            <div class="mb-4">
+            <div class="mb-8">
                 <p><strong>10/2023 - 02/2024: Motorista de aplicativos Uber/99</strong></p>
                 <p><strong>Cargo:</strong> Motorista particular</p>
                 <p><strong>Atividades Desenvolvidas:</strong> Transporte de passageiros com segurança responsabilidade na região do distrito federal e entorno.</p>
             </div>
-            <div class="mb-4">
+            <div class="mb-8">
                 <p><strong>02/2023 - 05/2023: DS Baluarte</strong></p>
                 <p><strong>Cargo:</strong> Segurança</p>
                 <p><strong>Atividades Desenvolvidas:</strong> vigilância patrimonial realizando controle de acesso, monitoramento de CFTV e rondas ostensiva do perímetro monitorado.</p>
             </div>
-            <div class="mb-4">
+            <div class="mb-8">
                 <p><strong>08/2021 - 11/2022: Cartório de Registros de Cidade Ocidental-GO</strong></p>
                 <p><strong>Cargo:</strong> Escrevente II</p>
                 <p><strong>Atividades Desenvolvidas:</strong> Atendimento telefônico, orçamento, prenotação de títulos, pedidos de certidão, digitalização e arquivamento de documentos.</p>
             </div>
-            <div class="mb-4">
+            <div class="mb-8">
                 <p><strong>2018 - 2021 – CP&P Informática</strong></p>
                 <p><strong>Cargo:</strong> Suporte Técnico</p>
                 <p><strong>Principais atividades:</strong> Suporte à Gerência de Rede e Servidores; Suporte Presencial e remoto a Atendimento de Usuários de TI; Manutenção de computadores e notebooks; Manutenção em impressoras; Criação e administração de sites Joomla e Serviços Web; Manutenção preventiva e corretiva nas estações de trabalho e outros equipamentos eletrônicos.</p>
             </div>
-            <div class="mb-4">
+            <div class="mb-8">
                 <p><strong>2017 – 2017 – Força Aérea Brasileira</strong></p>
                 <p><strong>Cargo:</strong> Soldado de Primeira classe</p>
                 <p><strong>(S1 SAD)</strong></p>
@@ -170,13 +173,14 @@
                 <p><strong>(S2 SSG)</strong></p>
                 <p><strong>Principais atividades:</strong> Segurança e defesa: designado para realizar atividades de segurança e defesa nas instalações, como bases aéreas e unidades operacionais realizando patrulhamento, controle de acesso, vigilância e medidas de proteção.</p>
             </div>
-            <div class="mb-4">
+            <div class="mb-8">
                 <p><strong>2009 - 2011 – Supermercado Mais econômico</strong></p>
                 <p><strong>Cargo:</strong> Atendente e estoquista</p>
                 <p><strong>Principais atividades:</strong> Atendimento ao cliente; Recebimento de cargas; Organização de Estoque; Reposição de Produtos.</p>
             </div>
         </div>
     </div>
+</center>
 </body>
 </html>
  </body>
