--- a/index.html
+++ b/index.html
@@ -131,8 +131,9 @@
     <p>
      Carga horária: 48 horas      Término: 05/2008
     </p>
+    <div></div>
      <p>
-    <strong>Curso:</strong> Informática (Básico)</p>
+    <strong>Curso: Informática (Básico)</strong></p>
     <p><strong>Instituição:</strong> October - Cursos de informática</p>
     <p><strong>Carga horária:</strong> 112 horas <strong>Término:</strong> 11/2005</p><br>
         </div>
