--- a/index.html
+++ b/index.html
@@ -131,17 +131,16 @@
     <p>
      Carga horária: 48 horas      Término: 05/2008
     </p>
-    <div></div>
-     <p>
-    <strong>Curso: Informática (Básico)</strong></p>
+    <div>
+    <p><strong>Curso: Informática (Básico)</strong></p>
     <p><strong>Instituição:</strong> October - Cursos de informática</p>
     <p><strong>Carga horária:</strong> 112 horas <strong>Término:</strong> 11/2005</p><br>
-        </div>
-        <div>
-            <hr class="border-gray-300 mb-8"/>
-            <div class="mb-8">
-             <h2 class="text-lg font-semibold mb-2">Experiências Profissionais</h2>
-            <div class="mb-8">
+    </div>
+    <div>
+    <hr class="border-gray-300 mb-8"/>
+    <div class="mb-8">
+    <h2 class="text-lg font-semibold mb-2">Experiências Profissionais</h2>
+    <div class="mb-8">
                 <p><strong>03/2024 - 11/2024: Global ala master</strong></p>
                 <p><strong>Cargo:</strong> Agente de portaria</p>
                 <p><strong>Atividades Desenvolvidas:</strong> Controle de acesso de pedestres e veículos em uma filial de transportadora e monitoramento de CFTV.</p>
