--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
      </p>
     </div>
     <div class="w-1/4">
-     <img alt="Profile picture of Tiago Batista da Silva" class="rounded-full" height="100" src="https://storage.googleapis.com/a1aa/image/KcCXAty6a0IgMxI5QyDTEOzCZBqJ8lQew51iWUwnRxfX2QzTA.jpg" width="100"/>
+     <img alt="Profile picture of Tiago Batista da Silva" class="rounded-full" height="100" src="https://i.ibb.co/3f5vm17/dc3669f0-b6c2-41a0-82d4-4e875059ce18.jpg" width="100"/>
     </div>
    </div>
    <hr class="border-gray-300 mb-8"/>
@@ -131,6 +131,7 @@
     <p>
      Carga horária: 48 horas      Término: 05/2008
     </p>
+    <br>
     <div>
     <p><strong>Curso: Informática (Básico)</strong></p>
     <p><strong>Instituição:</strong> October - Cursos de informática</p>
