--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <html>
  <head>
-  <title>
-   Curriculo de Tiago Batista da Silva
-  </title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com">
   </script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet"/>
+  <title>
+   Curriculo de Tiago Batista da Silva
+  </title>
  </head>
  <body class="bg-white text-black font-sans">
   <div class="max-w-4xl mx-auto p-8">
