--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Área restrita</title>
+    <title>Página de Login</title>
 </head>
 <body>
-    <form id="loginForm">
-        <label for="username">Nome de Usuário:</label>
+    <form action="verificar.php" method="post">
+        <label for="username">Usuário:</label>
         <input type="text" id="username" name="username" required>
         <br>
         <label for="password">Senha:</label>
-        <input type="password" id="password" name="password" required>
+        <input type="password"   
+ id="password" name="password" required>
         <br>
-        <button type="submit">Entrar</button>   
-    
+        <button type="submit">Entrar</br>   
+
     </form>
-       
 </body>
 </html>
