--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Página de Login</title>
 </head>
 <body>
-    <form action="verificar.php" method="post">
+    <form action="db-connect.php" method="post">
         <label for="username">Usuário:</label>
         <input type="text" id="username" name="username" required>
         <br>
